--- a/TripMatcher/src/app/registration-form/registration-form.component.html
+++ b/TripMatcher/src/app/registration-form/registration-form.component.html
@@ -5,5 +5,5 @@
   <label for="Rpassword">Password: </label>
   <input type="Rpassword" name="Rpassword" id="Rpassword" required formControlName="Rpassword">
 
-  <input type="button" value="Login!" (click)="submitRegistration()">
+  <input type="button" value="Registreerf!" (click)="submitRegistration()">
 </form>
