--- a/TripMatcher/src/app/hero/hero.component.css
+++ b/TripMatcher/src/app/hero/hero.component.css
@@ -1,19 +1,19 @@
 .hero {
-   background-image: url("../../assets/img/heroBG.jpg");
-   height: 584px;
+   background-image: url("../../assets/img/heroBGmobile.jpg");
+   height: 595px;
 }
 
 .heroTitle {
    display: flex;
    flex-direction: column;
    align-items: center;
-   padding-top: 130px;
+   padding-top: 30px;
 }
 
 h3 {
    font-family: Inter;
    font-weight: 800;
-   font-size: 40px;
+   font-size: 35px;
    text-align: center;
    background-color: white;
    padding: 10px;
@@ -21,7 +21,7 @@ h3 {
    margin-bottom: 5px;
    margin-top: 5px;
    font-style: normal;
-   line-height: 48px;
+   line-height: 42px;
    letter-spacing: -0.01em;
    color: #303030;
 }
@@ -30,13 +30,14 @@ h3 {
    margin-top: 30px;
 }
 
+
 h6 {
    margin: 0;
    font-family: Inter;
    font-style: normal;
    font-weight: 800;
-   font-size: 24px;
-   line-height: 29px;
+   font-size: 19px;
+   line-height: 23px;
    text-align: center;
    color: #F2F2F2;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
@@ -62,5 +63,29 @@ button {
    font-size: 22px;
    line-height: 27px;
    text-align: center;
+
+}
+
+@media only screen and (min-width: 1080px) {
+
+.hero {
+   background-image: url("../../assets/img/heroBG.jpg");
+   height: 584px;
+}
+
+.heroTitle {
+   padding-top: 130px;
+}
+
+h3 {
+   font-size: 40px;
+   line-height: 48px;
+}
+
+h6 {
+   font-size: 24px;
+   line-height: 29px;
+}
+
 
 }
