--- a/TripMatcher/src/app/footer/footer.component.html
+++ b/TripMatcher/src/app/footer/footer.component.html
@@ -19,10 +19,14 @@
     </div>
   </div>
   <div class="footerButton">
-    <button>CREATE PROFILE</button>
+    <button (click)="register()">CREATE PROFILE</button>
   </div>
 </div>
 <div class="footerDisclaimer">
   <p>Copyright TripMatcher &copy; 2021</p>
 
+</div>
+
+<div class="registrationForm">
+  <h1>Test</h1>
 </div>
