--- a/TripMatcher/src/styles.css
+++ b/TripMatcher/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+
 body {
    margin: 0;
    box-sizing: border-box;
@@ -7,3 +9,5 @@ body {
    margin-right: auto;
    font-family: 'Inter';
 }
+html, body { height: 100%; }
+/* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
