--- a/TripMatcher/src/app/app.component.html
+++ b/TripMatcher/src/app/app.component.html
@@ -1,5 +1,10 @@
-<app-navbar></app-navbar>
-<app-hero></app-hero>
-<app-main-filter></app-main-filter>
+<div class="container">
+  <app-navbar></app-navbar>
+  <app-hero></app-hero>
+  <app-main-filter></app-main-filter>
 
-<app-footer></app-footer>
+  <app-footer></app-footer>
+</div>
+
+
+<!-- <app-overlay></app-overlay> -->
