--- a/TripMatcher/src/app/login/login.component.html
+++ b/TripMatcher/src/app/login/login.component.html
@@ -1,15 +1,35 @@
-<form [formGroup]="loginFormulier">
-  <label for="login">Login: </label>
-  <input type="text" name="login" id="login" required formControlName="login">
+<div>
+  <div class="loginTitle">
+    <h3>Login</h3>
+    <p>Welcome back! Sign in to continue with your personalised experience</p>
+  </div>
+</div>
+<div class="loginForm">
 
-  <label for="password">Password: </label>
-  <input type="password" name="password" id="password" required formControlName="password">
+  <form [formGroup]="loginFormulier">
 
-  <input type="button" value="Login!" (click)="submitForm()">
-</form>
+    <div class="loginEmail formInput">
+      <label for="login">E-mail</label>
+      <input type="text" name="login" id="login" required formControlName="login">
+    </div>
+
+    <div class="loginPassword formInput">
+      <label for="password">Password</label>
+      <input type="password" name="password" id="password" required formControlName="password">
+    </div>
+
+    <input type="button" value="Sign in" (click)="submitForm()" class="button">
+
+  </form>
+</div>
+
+<div class="loginFooter">
+  <p>Not have any account yet? <a routerlink="">Sign up</a></p>
+</div>
 
 
-<p *ngIf="ready">{{apiLogin.login}}</p>
+
+<!-- <p *ngIf="ready">{{apiLogin.login}}</p> -->
 
 <a *ngIf="loginCorrect" routerLink="personalPage"><button>Page</button></a>
 
