--- a/TripMatcher/src/styles.css
+++ b/TripMatcher/src/styles.css
@@ -2,12 +2,13 @@
 
 
 body {
-   margin: 0;
+   
    box-sizing: border-box;
-   max-width: 1440px;
-   margin-left: auto;
-   margin-right: auto;
+   margin: 0;
+   /* margin-left: auto;
+   margin-right: auto; */
    font-family: 'Inter';
+   position: relative;
 }
-html, body { height: 100%; }
+/* html, body { height: 100%; } */
 /* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
