personal basic done

--- a/TripMatcher/src/app/app.component.html
+++ b/TripMatcher/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class="container">
   <app-navbar></app-navbar>
-  <app-hero></app-hero>
+  <app-personal-page></app-personal-page>
+  <!-- <app-hero></app-hero>
   <app-main-filter></app-main-filter>
 
-  <app-footer></app-footer>
+  <app-footer></app-footer> -->
+  <app-disclaimer></app-disclaimer>
 </div>
 
 
