--- a/TripMatcher/src/app/navbar/navbar.component.html
+++ b/TripMatcher/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navBar">
+<div class="navBar shadow">
   <img src="assets/img/logo2.png" alt="logo" class="logo">
   <div class="navItems">
     <a routerLink="">Home</a>
