--- a/TripMatcher/src/app/personal-page/personal-page.component.html
+++ b/TripMatcher/src/app/personal-page/personal-page.component.html
@@ -1,1 +1,24 @@
+<div class="personalPage">
+  <div class="profileHeader">
+    <img src="assets/img/profilePics/geert.jpg" alt="personal pic">
+    <div class="profileHeaderTitle">
+      <h5>Geert Rumen</h5>
+      <p>geert.rumen@gmail.com</p>
+    </div>
+  </div>
+  <div class="profileNavigation">
+    <a routerlink="">Favorites</a>
+    <a routerlink="">Interests</a>
+    <a routerlink="">Suggestions</a>
+    <a routerlink="">My Trips</a>
+  </div>
+</div>
+<div class="profileContent">
+  <div class="noContent">
+    <div>
+      <p>There is nothing in your favorites.</p>
+      <p><span class="blue">Begin to explore trips </span>and save your favorites...</p>
+    </div>
 
+  </div>
+</div>
