--- a/TripMatcher/src/app/registration-form/registration-form.component.html
+++ b/TripMatcher/src/app/registration-form/registration-form.component.html
@@ -10,8 +10,8 @@
         <input type="text" name="Rname" id="Rname" required formControlName="Rname">
       </div>
       <div class="formEmail formInput">
-        <label for="Rlogin">E-mail</label>
-        <input type="text" name="Rlogin" id="Rlogin" required formControlName="Rlogin">
+        <label for="Remail">E-mail</label>
+        <input type="text" name="Remail" id="Remail" required formControlName="Remail">
       </div>
       <div class="formPassword formInput">
         <label for="Rpassword">Password</label>
