--- a/TripMatcher/src/app/login/login.component.html
+++ b/TripMatcher/src/app/login/login.component.html
@@ -9,13 +9,13 @@
   <form [formGroup]="loginFormulier">
 
     <div class="loginEmail formInput">
-      <label for="login">E-mail</label>
-      <input type="text" name="login" id="login" required formControlName="login">
+      <label for="Lemail">E-mail</label>
+      <input type="text" name="Lemail" id="Lemail" required formControlName="Lemail">
     </div>
 
     <div class="loginPassword formInput">
-      <label for="password">Password</label>
-      <input type="password" name="password" id="password" required formControlName="password">
+      <label for="Lpassword">Password</label>
+      <input type="Lpassword" name="Lpassword" id="Lpassword" required formControlName="Lpassword">
     </div>
 
     <input type="button" value="Sign in" (click)="submitForm()" class="button">
