--- a/TripMatcher/src/app/app.component.html
+++ b/TripMatcher/src/app/app.component.html
@@ -8,5 +8,6 @@
   <app-disclaimer></app-disclaimer>
 </div>
 
-
-<!-- <app-overlay></app-overlay> -->
+<div id="overlay" *ngIf="openOverlay.overlayDisplay">
+  <app-overlay></app-overlay>
+</div>
