--- a/TripMatcher/src/app/footer/footer.component.html
+++ b/TripMatcher/src/app/footer/footer.component.html
@@ -19,6 +19,6 @@
     </div>
   </div>
   <div class="footerButton">
-    <button (click)="register()">CREATE PROFILE</button>
+    <button (click)="openOverlayComponent()">CREATE PROFILE</button>
   </div>
 </div>
