--- a/TripMatcher/src/app/overlay/overlay.component.html
+++ b/TripMatcher/src/app/overlay/overlay.component.html
@@ -1,5 +1,10 @@
 <div class="overlayBG">
+
   <div class="overlayVak">
+    <div class="closetag">
+      <img src="\assets\img\closePopUp.svg" alt="closePopUp" (click)="closeOverlay()">
+    </div>
+
     <div class="overlayType">
       <!-- <app-registration-form></app-registration-form> -->
       <app-login></app-login>
