--- a/TripMatcher/src/app/hero/hero.component.html
+++ b/TripMatcher/src/app/hero/hero.component.html
@@ -9,6 +9,6 @@
     <h6>vaction</h6>
   </div>
   <div class="heroButton">
-    <button>GET STARTED</button>
+    <button (click)="openOverlayComponent()">GET STARTED</button>
   </div>
 </div>
