Burcu: Hero typo change

--- a/TripMatcher/src/app/hero/hero.component.html
+++ b/TripMatcher/src/app/hero/hero.component.html
@@ -6,7 +6,7 @@
   <div class="heroSub">
     <h6>Create your profile and get</h6>
     <h6>matched with your ideal</h6>
-    <h6>vaction</h6>
+    <h6>vacation</h6>
   </div>
   <div class="heroButton">
     <button>GET STARTED</button>
