--- a/TripMatcher/TripMatcher/src/app/activiteit/activiteit.component.html
+++ b/TripMatcher/TripMatcher/src/app/activiteit/activiteit.component.html
@@ -1,6 +1,6 @@
 <div class="activiteit">
   <div>
-    <div class="afbeelding"><img src="/assets/img/TODI4.jpg" alt="Todi"></div>
+    <div class="afbeelding"><img src="/assets/img/Trip/TODI4.jpg" alt="Todi"></div>
     <div (click)="favo()" [ngClass]="statusClass" class="like"><img src="/assets/img/Hart.svg" alt="hart">
     </div>
   </div>
@@ -20,6 +20,7 @@
       <div class="tag"> Indoor</div>
       <div class="tag"> Adventure</div>
 
+
       <!-- <div (click)="veranderKleur()" [ngClass]="statusClass">LIKE</div> -->
     </div>
 
@@ -28,7 +29,7 @@
 
 
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/fietsenWater2.jpg" alt="Fietsen"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/fietsenWater2.jpg" alt="Fietsen"></div>
   <div>
     <div class="titel">Fietsen door het water</div>
     <div class="tekst">Een unieke fietsbeleving waarbij je meer dan 200 meter dwars door
@@ -48,7 +49,7 @@
 
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/via ferrata.jpg" alt="ViaFerrata"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/via ferrata.jpg" alt="ViaFerrata"></div>
   <div class="tekst"><b>Via ferrata</b> is een term uit het alpinisme. Van oorsprong Italiaans betekent het "ijzeren
     weg" en
     geeft daarmee al meteen een goede definitie van het begrip. Een via ferrata is namelijk een met staalkabels uitgezet
@@ -58,7 +59,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/skydive.jpg" alt="Skydive"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/skydive.jpg" alt="Skydive"></div>
   <div class="tekst"><b>Indoor skydiven</b> doe je in een zogenoemde verticale windtunnel. In de windtunnel wordt de
     vrije val
     bij het parachutespringen nagebootst. Daarbij beweegt de lucht van beneden naar boven met snelheden die variëren van
@@ -67,7 +68,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/blotevoetenpad2.jpg" alt="Blote Voeten"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/blotevoetenpad2.jpg" alt="Blote Voeten"></div>
   <div class="tekst">Heb je altijd al willen weten hoe het voelt om op blote voeten in de vrije natuur rond te lopen?
     Kom dan het <b>blotevoetenpad</b> ontdekken en ervaar het ultieme gevoel van vrijheid. Zet al je zintuigen en beide
     voeten
@@ -77,7 +78,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/rafting.jpg" alt="Rafting"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/rafting.jpg" alt="Rafting"></div>
   <div class="tekst"><b>Raften</b> is een sensationele activiteit waarbij u met een raft de rivier gaat bedwingen.
     In de Ardennen wordt deze tak van sport vooral op de Ourthe beoefendDit is een rivier van klasse I. Dit houdt in dat
     de rivieren uitermate geschikt zijn voor beginners.
@@ -88,7 +89,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/bobbejaanland.jpg" alt="Bobbejaanland"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/bobbejaanland.jpg" alt="Bobbejaanland"></div>
   <div class="tekst"><b>Bobbejaanland</b> is een pretpark in Lichtaart, gelegen tussen Herentals en Kasterlee in België,
     en is
     genoemd naar zijn oprichter Bobbejaan Schoepen.
@@ -100,7 +101,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/gardaland.jpg" alt="Gardaland"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/gardaland.jpg" alt="Gardaland"></div>
   <div class="tekst"><b>Gardaland</b> is een attractiepark bij Castelnuovo del Garda aan het Gardameer in Italië. Het
     werd
     geopend in juli 1975 en is sindsdien, met meer dan 2,5 miljoen bezoekers per jaar, uitgegroeid tot het grootste en
@@ -108,7 +109,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/efteling.jpg" alt="Efteling"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/efteling.jpg" alt="Efteling"></div>
   <div class="tekst"><b>De Efteling</b> is een attractiepark en recreatiecomplex in Kaatsheuvel, Nederland. Naast het
     attractiepark omvat de hele Wereld van de Efteling een theater, twee hotels en twee vakantieparken.
     De Efteling is qua bezoekersaantallen en oppervlakte het grootste attractiepark van de Benelux.
@@ -116,7 +117,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/disneyland.jpg" alt="Disneyland"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/disneyland.jpg" alt="Disneyland"></div>
   <div class="tekst"><b>Disneyland Paris</b> is een attractiepark- en recreatiecomplex in Marne-la-Vallée, een stad in
     de
     banlieue van de Franse hoofdstad Parijs. Disneyland Paris is het vierde Disney-resort ter wereld en bestaat uit
@@ -126,7 +127,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/Chocolate.jpg" alt="Chocolade"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/Chocolate.jpg" alt="Chocolade"></div>
   <div class="tekst">Zodra je de deur opent bij <b>Chocolate Nation</b> komt de chocoladegeur je al tegemoet. In dit
     chocolademuseum bevinden zich namelijk ook meerdere ateliers waar je kan zien hoe ze Belgische chocola maken. Via
     een ruimte als een schip, waar je over de reling kijkend kan zien hoe
@@ -137,7 +138,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/van Gogh.jpg" alt="Van Gogh"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/van Gogh.jpg" alt="Van Gogh"></div>
   <div class="tekst">Het <b>Van Gogh Museum</b> is een aan de Nederlandse kunstschilder Vincent van Gogh gewijd museum
     in
     Amsterdam.
@@ -147,7 +148,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/louvre.jpg" alt="Louvre"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/louvre.jpg" alt="Louvre"></div>
   <div class="tekst"><b>Het Louvre</b> is een van 's werelds grootste musea en ligt in de Franse hoofdstad Parijs.
     De Mona Lisa van Leonardo da Vinci is waarschijnlijk het beroemdste stuk uit de collectie van het Louvre. Het museum
     maakt deel uit van de Réunion des musées nationaux et du Grand Palais des Champs-Élysées. Het is sinds jaren 's
@@ -156,7 +157,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/colosseum.jpg" alt="Colosseum"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/colosseum.jpg" alt="Colosseum"></div>
   <div class="tekst">Het Flavisch Amfitheater, beter bekend als het <b>Colosseum</b> in Rome, was het grootste
     amfitheater in
     het Romeinse Rijk.
@@ -167,7 +168,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/torbole.jpeg" alt="Gardameer"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/torbole.jpeg" alt="Gardameer"></div>
   <div class="tekst"><b>Het Gardameer</b> (Italiaans: Lago di Garda) is het grootste meer van Italië. Het heeft een
     oppervlakte
     van 369,98 km². Het landschap heeft een schilderachtig karakter door het diepblauwe water, de citroenbomen en de
@@ -178,7 +179,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/Santa Giulia.jpg" alt="Santa Giulia"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/Santa Giulia.jpg" alt="Santa Giulia"></div>
   <div class="tekst">Het Ile de Beauté grossiert in paradijselijke baaien en inhammen. Behalve de schitterende stranden
     van Rondinara en Pallombaggia mag je ook de beroemde <b>baai van Santa Giulia</b> niet missen! Gelegen aan de voet
     van een
@@ -187,7 +188,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/smaak.jpg" alt="Smaak"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/smaak.jpg" alt="Smaak"></div>
   <div class="tekst"><b>SMA(A)K</b>, da’s veel meer dan overheerlijk streetfood van foodtrucks die uit alle windhoeken
     komen
     gerold. Het is een belevingsfestival met gezellige zithoeken, sfeerdecoratie, swingende beats, theater, live muziek,
@@ -198,7 +199,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/pizzafest2.jpg" alt="Pizzafest"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/pizzafest2.jpg" alt="Pizzafest"></div>
   <div class="tekst">Zin in Pizza? Dan is <b>Pizzafest</b> in Napels the place to be! Hier verzamelen de inwoners zich
     ieder
     jaar om meer dan 100.000 pizzas te maken en te delen met alle pizza lovers van Italie en ver daar buiten. Ga je voor
@@ -206,7 +207,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/omelet.jpg" alt="Omelet"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/omelet.jpg" alt="Omelet"></div>
   <div class="tekst">Hou je van <b>omelet</b> als ontbijt? Volgens de legende, heeft Napoleon ooit alle eieren in de
     stad
     besteld om een grote omelet mee te maken. Deze traditie vieren ze nog steeds in de stad Bessières in Frankrijk.
@@ -214,7 +215,7 @@
   </div>
 </div>
 <div class="activiteit">
-  <div class="afbeelding"><img src="/assets/img/trek.jpg" alt="Trek"></div>
+  <div class="afbeelding"><img src="/assets/img/Trip/trek.jpg" alt="Trek"></div>
   <div class="tekst"><b>Festival TREK</b> is het grootste rondreizende foodfestival van Nederland.
     De stadsparken worden omgetoverd tot een groot openluchtrestaurant, waar je kunt genieten van verrassend
     entertainment van jonge theatermakers, kleinkunst- en muzikaal talent gecombineerd met een divers aanbod gerechtjes
