connection back online

--- a/TripMatcher/src/app/overlay/overlay.component.html
+++ b/TripMatcher/src/app/overlay/overlay.component.html
@@ -6,8 +6,8 @@
     </div>
 
     <div class="overlayType">
-      <!-- <app-registration-form></app-registration-form> -->
-      <app-login></app-login>
+      <app-registration-form></app-registration-form>
+      <!-- <app-login></app-login> -->
     </div>
   </div>
 </div>
