--- a/TripMatcher/src/app/navbar/navbar.component.html
+++ b/TripMatcher/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <a routerLink="">Home</a>
     <a routerLink="">Destinations</a>
     <a routerLink="">Activities</a>
-    <a routerLink="">My <span class="blauwTrip">Trip</span>Matcher</a>
+    <a routerLink="">{{userName}}'s <span class="blauwTrip">Trip</span>Matcher</a>
   </div>
 </div>
 
