--- a/TripMatcher/src/app/personal-page/personal-page.component.html
+++ b/TripMatcher/src/app/personal-page/personal-page.component.html
@@ -2,8 +2,8 @@
   <div class="profileHeader">
     <img src="assets/img/profilePics/geert.jpg" alt="personal pic">
     <div class="profileHeaderTitle">
-      <h5>Geert Rumen</h5>
-      <p>geert.rumen@gmail.com</p>
+      <h5>{{userName}}</h5>
+      <p>{{userEmail}}</p>
     </div>
   </div>
   <div class="profileNavigation">
