--- a/TripMatcher/src/app/trips/trips.component.html
+++ b/TripMatcher/src/app/trips/trips.component.html
@@ -1,5 +1,5 @@
-<div class="activiteit" *ngFor="let item of this.apiTrip.trip">
-  <div class="tripImage" (id)="item">
+<div class="activiteit" *ngFor="let item of this.apiTrip.trip; let index = index">
+  <div class="tripImage">
     <div class="afbeelding">
       <img src="{{item.Image}}" alt="image of activity">
     </div>
@@ -9,16 +9,18 @@
   <div class="tripContent">
     <div class="titel">
       <h3>{{item.Title}}</h3>
-      <!-- <h3>{{item.Trip_id}}</h3> -->
     </div>
     <div class="tekst">
       <p>{{item.Summary}}</p>
     </div>
     <div class="tagline">
-      <div class="tag" *ngFor="let tag of this.apiTags.tripTags">{{tag.Category_name}}</div>
 
+      <div class="tag" *ngFor="let tag of this.apiTrip.trip[index].tripTags">{{tag["Category_name"]}}</div>
 
       <!-- <div (click)="veranderKleur()" [ngClass]="statusClass">LIKE</div> -->
     </div>
+
+
+
   </div>
 </div>
