--- a/TripMatcher/src/app/overlay/overlay.component.html
+++ b/TripMatcher/src/app/overlay/overlay.component.html
@@ -8,6 +8,7 @@
     <div class="overlayType">
       <!-- <app-registration-form></app-registration-form> -->
       <app-login></app-login>
+      <!-- <app-change-account></app-change-account> -->
     </div>
   </div>
 </div>
