--- a/TripMatcher/src/app/trips/trips.component.html
+++ b/TripMatcher/src/app/trips/trips.component.html
@@ -1,3 +1,5 @@
+<button (click)="filterMe()">Italy</button>
+
 <div class="activiteit" *ngFor="let item of this.apiTrip.trip; let index = index">
   <div class="tripImage">
     <div class="afbeelding">
