--- a/TripMatcher/src/app/navbar/navbar.component.html
+++ b/TripMatcher/src/app/navbar/navbar.component.html
@@ -6,6 +6,13 @@
     </div>
     <div class="menuItem">
       <a routerLink="">Destinations</a>
+      <div class="navBarPersonal">
+        <p (click)="filterCountry()">{{Belgium}}Belgium</p>
+        <p>Netherlands</p>
+        <p>France</p>
+        <p>Italy</p>
+        <p>Germany</p>
+      </div>
     </div>
     <div class="menuItem">
       <a routerLink="">Activities</a>
@@ -16,7 +23,7 @@
         <div *ngIf="userName == undefined">My <span class="blauwTrip">Trip</span>Matcher</div>
         <div *ngIf="userName != undefined">{{userName}}'s <span class="blauwTrip">Trip</span>Matcher</div>
       </a>
-      <div class="navBarPersonal" *ngIf="openNavBarPersonalDisplay">
+      <div class="navBarPersonal">
         <div>
           <p (click)="openSettings()">Account Settings</p>
           <p (click)="signOut()">Sign Out</p>
