--- a/TripMatcher/src/app/trips/trips.component.html
+++ b/TripMatcher/src/app/trips/trips.component.html
@@ -1,6 +1,4 @@
-<button (click)="filterMe()">Italy</button>
-
-<div class="activiteit" *ngFor="let item of this.apiTrip.trip; let index = index">
+<div class="activiteit" *ngFor="let item of this.filter.apiTrip.trip; let index = index">
   <div class="tripImage">
     <div class="afbeelding">
       <img src="{{item.Image}}" alt="image of activity">
@@ -17,7 +15,7 @@
     </div>
     <div class="tagline">
 
-      <div class="tag" *ngFor="let tag of this.apiTrip.trip[index].tripTags">{{tag["Category_name"]}}</div>
+      <div class="tag" *ngFor="let tag of this.filter.apiTrip.trip[index].tripTags">{{tag["Category_name"]}}</div>
 
       <!-- <div (click)="veranderKleur()" [ngClass]="statusClass">LIKE</div> -->
     </div>
